<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home.HomeFragment">

    <!-- Title -->
    <TextView
        android:id="@+id/text_title_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_title_home"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Illustration Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_illustration"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/text_title_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Image Ilustration-->
        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/illustration_upload"
            android:contentDescription="@string/app_name" />
    </androidx.cardview.widget.CardView>

    <!-- Upload Area -->
    <LinearLayout
        android:id="@+id/btn_gallery"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/bg_upload_border"
        app:layout_constraintTop_toBottomOf="@id/card_illustration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_upload_file_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/upload_file"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/grey_medium"
            android:textSize="14sp"
            android:contentDescription="Tombol untuk Upload File"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <!-- Button Camera -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_camera"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/open_camera"
        android:textColor="@color/grey_medium"
        app:icon="@drawable/ic_photo_camera_24"
        app:iconTint="@color/grey_dark"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        android:background="@drawable/bg_button_yellow"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/btn_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Button Predict -->
    <Button
        android:id="@+id/btn_predict"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/prediction"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_bold"
        android:background="@drawable/button_prediction"
        app:layout_constraintTop_toBottomOf="@id/btn_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Text Bottom Nav Home  -->
    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>